--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             Louisville Area: </p>
   
        <div class="parktable">
-            <img src="Cochranhilllogo.gif">
-            <img src="Championslogo.gif">                   
-            <img src="cauleylogo.gif">
+            <img src="Images/Cochranhilllogo.gif">
+            <img src="Images/Championslogo.gif">                   
+            <img src="Images/cauleylogo.gif">
         </div>       
 
     </div>
