--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
             Louisville Area: </p>
   
        <div class="parktable">
-            <img src='img/Cochranhilllogo.gif'>
-            <img src='img/Championslogo.gif'>                   
+            <img src='img/barklands-shield.gif'>
             <img src='img/cauleylogo.gif'>
+            <img src='img/Championslogo.gif'>
+            <img src='img/Cochranhilllogo.gif'>
+            <img src='img/newvettinerlogo.gif'>                   
+            <img src='img/Oldlouisvillelogo.gif'>
+            <img src='img/waverly.gif'>
         </div>       
 
     </div>
