--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             (502) 876-9416
             info@louisvilledogs.com
         </p>
+        <p class='footerdesign'>@ 2018 Cameron Jones</p>
     </footer>
 </div>
 <!---Footer End--->
