--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <button type="submit" name="submit" onclick="sendData({test:'ok'})">Submit</button>
     </form>
 <!--Form End-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZW0gmF9ybxCcmEwhwlWnN9oPQhIBXg74&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZW0gmF9ybxCcmEwhwlWnN9oPQhIBXg74&callback=dogRunMap" async defer></script>
 <!---Google API Map--->
     <div id="map"> </div>
 </div>
