--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <form>
         <h1>Does my dog meet LDRA requirements for park entry?</h1>
 
-        <label for="weight">What is your Dog's weight?</label><br>
+        <label for="weight">What is your dog's weight?</label><br>
         <select id="weight" name=weight><br>
             <option value="10lb">10 lb</option>
             <option value="20lb">20 lb</option>
